--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,8 @@ h1 {
         font-size: 1.5rem;
     }
 
-    .login-form input, .login-form button {
-        width: 90%;
+    .login-box {
+        width: 70%;
     }
 }
 
