--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
     padding: 100px;
     font-family: Arial, sans-serif;
     background: url(image.png);
+    background-size: cover;
     /*animation: gradientBG 7s ease infinite;*/
     /*background: linear-gradient(135deg, #7B68EE 25%, #87CEEB 50%, #46ADB4 75%);*/
     /*background-size: 400% 400%;*/
